# Rust-master-backend

./: .env  .gitignore  Cargo.toml  README.md  WORKFLOW.md  justfile  private_v1_crud.hurl  topics.md
.sqlx/: query-15046b60c06407c9a003cdd0641a18fb8013d2853ee701b3f2b6edd3a7748062.json  query-30acfd4a9eed10a6387071ef53ca7fbd136cdd03e7435a6a57c35f5f101bc1c3.json  query-4d2fcbe571152f23f81f879bb11537c885a629b01412eb0384ad724cd0cc7224.json  query-5b96fa733fad1b12e8d2ad3da952439e0d563e91fe7f32e69b46837be2f6bcdd.json  query-798a22a1e714f7e15024ad419eaddcbcdabd8559cf72fe3aa295db5468247e7f.json  query-a0b766a1d39dd1a02629a4b39b72faea7e906856adc26c5e5a7bd614a5ef62ae.json  query-b64d8093407247333ba40f5aaea56627fa95639f903e1b570454f9c24db78c14.json  query-bf05a6dd5a0804ac5ffb428250a3f1fc63e31b028ed16cb5cf914a003c4f2f4f.json  query-e16a1af7db341d95e8f0ad101a00bee363c2e42ad0613f6b6898eeacb9149a9a.json  query-f786162cbb1503877e724cc053a4f7521a29b0607ca16f48fec06780a2b400ab.json  query-fe4f9fb4a7ca91b3160f370677ec05a43a107328d1f9243ebd5f224342b4377f.json  query-fe5913e249fab3d02615938c710b03a165cccb9f4184f85950c611bacc499e8e.json
aws-lambda/: Cargo.toml  README.md  deploy.ps1
aws-lambda/src/: main.rs
cloudflare-worker/: Cargo.toml  README.md  wrangler.toml
cloudflare-worker/src/: encryption.rs  lib.rs
helper_ai_commands/: feature_md_creation.md
hurl/: file_preprocess.hurl  gallery.hurl  orders.hurl  users.hurl
migrate-mongo/: README.md  migrate-mongo-config.js  package-lock.json  package.json
migrate-mongo/migrations/: 20260610120000-create-mongodb-collections.js
migrations/: 20260606151741_create_user_roles_table.sql  20260606160148_update_user.sql  20260623120000_create_users_table.sql
references/cloudflareUtils/: r2Config.js  r2Operations.js
src/: lib.rs  main.rs
src/_features/crud/product_category_crud/: features.md
src/_utils/: app_error.rs  constants.rs  functions.rs  mod.rs  security.rs  validate_json.rs
src/configuration/: config.rs  dev_config.rs  local_config.rs  mod.rs  prod_config.rs  stage_config.rs
src/connections/: app_state.rs  mod.rs
src/connections/_mongodb/: mongodb.rs
src/domain/: mod.rs
src/domain/gallery/: gallery_dto.rs  gallery_types.rs  mod.rs
src/domain/mongodb_tests/: README.md
src/domain/orders/: mod.rs  order_dto.rs  order_types.rs
src/domain/postgresql_tests/: README.md
src/domain/product_categories/: mod.rs  product_categories_repo.rs
src/domain/products/: mod.rs  product_dto.rs  product_types.rs
src/domain/user_roles/: mod.rs  user_role_dto.rs  user_role_type.rs
src/domain/users/: mod.rs  user_dto.rs  user_repo.rs  user_type.rs
src/infrastructure/: app_state.rs  mod.rs
src/infrastructure/_mongodb/: mod.rs  mongodb_collections.rs
src/infrastructure/_mongodb/migration/: mod.rs
src/infrastructure/_mongodb/model/: mod.rs  order_mongodb.rs  product_category_mongodb.rs  product_mongodb.rs
src/infrastructure/_mongodb/repository/: mongodb_repo_v1.rs
src/infrastructure/_postgresql/: mod.rs  postgresql.rs  psql_app_error.rs  psql_connction.rs
src/infrastructure/_postgresql/repositories/: mod.rs  user_roles_psql_repo.rs
src/infrastructure/db/mongodb/: mod.rs  mongodb_collections.rs
src/infrastructure/db/mongodb/model/: gallery_mongodb.rs  mod.rs  order_mongodb.rs  product_category_mongodb.rs  product_mongodb.rs
src/infrastructure/db/mongodb/repository/: mod.rs  mongodb_repo_v1.rs
src/infrastructure/db/postgresql/: CHEATSHEET.md  README.md  mod.rs
src/infrastructure/storage/: README.md  image_preprocessing.rs  mod.rs  storage_types.rs  storage_util.rs
src/infrastructure/storage/aws/: mod.rs
src/infrastructure/storage/cloudflare/: mod.rs
src/infrastructure/storage/file_preprocess/: encryption_utils.rs  file_preprocess_aws_lambda.rs  file_preprocess_cf_worker.rs  file_preprocess_local.rs  mod.rs
src/infrastructure/storage/localstorage/: mod.rs
src/routes/: mod.rs
src/routes/private/: mod.rs
src/routes/private/v1/: mod.rs
src/routes/private/v1/gallery/: gallery_controller.rs  gallery_router.rs  mod.rs
src/routes/private/v1/orders/: mod.rs  order_controller.rs  order_router.rs
src/routes/private/v1/product_categories/: mod.rs  product_categories_controller.rs  product_categories_router.rs
src/routes/private/v1/products/: mod.rs  product_controller.rs  product_router.rs
src/routes/private/v1/user_roles/: mod.rs  user_role_controller.rs  user_role_router.rs
src/routes/private/v1/users/: mod.rs  user_controller.rs  user_router.rs
src/services/: mod.rs
src/services/domain_services/: gallerly_services.rs  gallery_services.rs  mod.rs  order_services.rs  product_categories_services.rs  product_services.rs  user_roles_psql_services.rs  user_services.rs
src/services/logger_services/: common_logging_services.rs  dev_logging_services.rs  mod.rs
tests/: order_integration_tests.rs  user_integration_tests.rs
