[package]
name = "rust-tut-day1"
version = "0.1.0"
edition = "2024"

[dependencies]
# axum is required for building web applications and APIs in Rust, providing a powerful and ergonomic framework for handling HTTP requests and responses
axum = "0.8"
# tokio is required for asynchronous programming, which is essential for building web servers and handling concurrent tasks efficiently
tokio = { version = "1", features = ["full"] }
# dotenvy is required for loading environment variables from a .env file, which is useful for configuration management
dotenvy = "0.15"
# logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# mongodb and bson are required for MongoDB interactions
mongodb = "3.7.0"
# bson is required for working with BSON documents, which MongoDB uses for data storage and retrieval
bson = { version = "3.1.0", features = ["chrono-0_4"] }
# serde is required for serializing and deserializing data, especially when working with JSON or BSON formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# futures is required for working with asynchronous programming and handling futures in Rust
futures = "0.3"
# schemars is required for generating JSON Schema from Rust types, which can be useful for API documentation and validation
schemars = { version = "1.2.1", features = ["derive"] }
# garde is required for data validation, ensuring that the data structures used in the application meet certain criteria and constraints
garde = { version = "0.23.0", features = ["derive", "regex", "email"] }
#
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    'uuid',
] }
#
thiserror = "2.0.18"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
