[package]
name = "cf-worker-preprocess"
version = "0.1.0"
edition = "2024"

[package.metadata.wrangler]
name = "rust-tut-preprocess-worker"
compatibility_date = "2026-06-29"
main = "build/worker/shim.mjs"
# Route binding (change to your domain)
# routes = ["https://media.example.com/*"]

# ─── workers-rs (Rust → WASM Cloudflare Worker) ───────────────────────────
# This crate lets you write Cloudflare Workers entirely in Rust.
# It compiles to WASM and runs inside the Worker V8 isolate.
#
# Quick start:
#   1. cargo build --release --target wasm32-unknown-unknown
#   2. npx wrangler deploy
#
# Docs: https://github.com/cloudflare/workers-rs
# ============================================================================

[dependencies]
worker = { version = "0.5", features = ["r2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For image preprocessing in WASM, add one of:
#   - photon-rs (native WASM support)
#   - image with WASM-compatible features (jpeg, png)
# See image processing section below.
# photon-rs = "0.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Optimize for WASM size
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# ─── Image Processing in WASM ──────────────────────────────────────────────
# The `image` crate has WASM support but the `webp` feature may not work.
# For WASM-compatible image processing, use `photon-rs` instead:
#
# ```toml
# photon-rs = "0.3"
# ```
#
# Example usage in the worker:
# ```rust
# use photon_rs::transform::resize;
# use photon_rs::native::open_image_from_bytes;
#
# let img = open_image_from_bytes(&bytes).unwrap();
# let resized = resize(&img, 512, 512, photon_rs::transform::SamplingFilter::Lanczos3);
# let output = photon_rs::native::open_image_bytes(resized);
# ```
# ============================================================================
